[package]
name = "lambda-test-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
aws-config = "0.47.0"
chrono = "0.4.22"
csv = "1.1.6"
env_logger = "0.9.0"
futures = "0.3.24"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
structopt = "0.3.26"
tokio = { version = "1.20.1", features = ["full"] }
